# openclaw-x-skill

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
agent/: IDENTITY.md  SOUL.md
skill/: SKILL.md
src/openclaw_x/: __init__.py  api.py  auth.py  cli.py  formatters.py  media.py  threads.py  utils.py
tests/: conftest.py  test_api.py  test_auth.py  test_formatters.py  test_media.py  test_threads.py  test_utils.py
