[project]
name = "openclaw-x"
version = "0.1.0"
description = "OpenClaw X/Twitter skill — full-featured CLI for X API v2"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "AmuMoon" }]
readme = "README.md"
keywords = ["x", "twitter", "cli", "openclaw", "skill"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.scripts]
openclaw-x = "openclaw_x.cli:main"

[project.urls]
Homepage = "https://github.com/AmuMoon/openclaw-x-skill"
Issues = "https://github.com/AmuMoon/openclaw-x-skill/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openclaw_x"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.4", "respx>=0.22"]
